# GLCS_Sermon_DB_Cleanup

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  column_stats.py  config.py  create_file_of_headers.py  create_master_table.py  main.py  pyproject.toml  report.py  run.bat  utils.py
Programs/: __init__.py  column_stats.py  config.py  create_file_of_headers.py  create_master_table.py  main.py  report.py  utils.py
data/: master_table.tsv
documentation/: todo.txt
